--- a/content/css/stylesheet.scss
+++ b/content/css/stylesheet.scss
@@ -432,7 +432,7 @@ header {
   }
 
   #submenu-about.submenu-about-small {
-    margin-top: $navbar-small-height;
+    margin-top: 0;
   }
 
   #submenu-about ul {
@@ -559,6 +559,7 @@ header {
 
 #header-small {
   height: $navbar-small-height;
+  position: relative;
 }
 
 #navbar-small {
@@ -567,6 +568,7 @@ header {
 
 header #navbar-small {
   height: $navbar-small-height;
+  position: relative;
   .logo-small {
     margin-left: 10%;
   }
